# Personal-AI-Workspace

./: ATTRIBUTION.md  AUTHORS.md  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  release-index.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  installation-help.yml
.github/workflows/: pages.yml  publish-releases.yml  validate-skill-pack.yml  validate.yml
.superpowers/sdd/: progress.md
archive/: README.md
docs/: 404.html  INSTALLATION-WIZARD-QA.md  app.js  hot-tips.html  index.html  install.html  site-v2.css  styles.css  what-it-does.html  wizard.js
docs-internal/: 2026-07-14-public-repository-design.md
docs/assets/: optional-integrations-note.txt
history/: README.md
history/patches/: v1.0-to-v1.1.patch  v1.1-to-v1.2.patch  v1.2-to-v1.3.patch  v1.3-to-v1.4.patch  v1.4-to-v1.5.patch  v1.5-to-v1.5.1.patch
releases/: v1.0.md  v1.1.md  v1.2.md  v1.3.md  v1.4.md  v1.5.1.md  v1.5.md
scripts/: build_releases.sh  validate_release_index.py  validate_repo.py
skill-pack/: README.md
skill-pack/scripts/: __init__.py  build_skill_pack.py  package_skill_pack.py  scan_private_identifiers.py  validate_skill_pack.py
skill-pack/tests/: test_build.py  test_cli.py  test_frontmatter.py  test_models.py  test_package.py  test_repository_layout.py  test_scanner.py  test_schemas.py  test_validate.py
source/creator/: part-001.md  part-002.md  part-003.md  part-004.md  part-005.md  part-006.md  part-007.md  part-008.md  (+5 more)
(+51 files in other folders)
